# Taurinelauncher

./: .gitignore  HANDOFF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  fs.rs  java.rs  launcher.rs  memory.rs  mod.rs  modrinth.rs  profile.rs  server.rs
src-tauri/src/models/: launch_config.rs  mod.rs  mod_info.rs  profile.rs  server_config.rs
src-tauri/src/services/: auth_service.rs  java_service.rs  launch_service.rs  memory_service.rs  mod.rs  modrinth_service.rs  profile_service.rs  server_service.rs
