[package]
name = "taurine-launcher"
version = "0.1.0"
description = "A lightweight Minecraft Java Edition launcher"
authors = ["Taurine Launcher contributors"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri = { version = "2", features = [] }
thiserror = "1"
toml = "0.8"
